--- a/VitecAPI/appsettings.json
+++ b/VitecAPI/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "VitecAPIContext": "Server=(localdb)\\mssqllocaldb;Database=VitecAPIContext-e9d93ee6-d79b-4951-8eab-af8869e6fa55;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
