--- a/VitecMvSemester3/appsettings.json
+++ b/VitecMvSemester3/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-VitecMvSemester3-B1E9F3A3-33F7-4EC2-8AFE-28F1917A84AE;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-VitecMvSemester3-B1E9F3A3-33F7-4EC2-8AFE-28F1917A84AE;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "VitecMvSemester3Context": "Server=(localdb)\\mssqllocaldb;Database=VitecMvSemester3Context-958eca33-2b8a-4229-92e4-3d97c8c4e1aa;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
